--- a/src/app/components/auth/sign-in/activation-instructions/activation-instructions.component.html
+++ b/src/app/components/auth/sign-in/activation-instructions/activation-instructions.component.html
@@ -1,1 +1,12 @@
-<p>activation-instructions works!</p>
+<div class="standard-width relative full-height">
+    <div class="picture-container">
+        <img class="full-width" src="../../../../../assets/images/activate.PNG" alt="activate">
+    </div>
+    <div class="padding-10 flex column gap-1em">
+        <button class="white blue-bg full-width" mat-raised-button>Confirm</button>
+        <button class="blue-color white-bg full-width border-blue" mat-raised-button><b>Cancel</b></button>
+    </div>
+    <div class="absolute">
+        <app-footer></app-footer>
+    </div>
+</div>
