--- a/src/app/components/auth/sign-in/confirm-app-activation/confirm-app-activation.component.html
+++ b/src/app/components/auth/sign-in/confirm-app-activation/confirm-app-activation.component.html
@@ -1,1 +1,14 @@
-<p>confirm-app-activation works!</p>
+<div class="standard-width full-height">
+    <div class="blue-bg height-50 bar">
+        <mat-icon matPrefix class="white text-center">arrow_back</mat-icon>
+        <p class="white"><b>Activate App</b></p>
+    </div>
+    <div class="picture-container">
+        <img class="full-width" src="../../../../../assets/images/home.PNG" alt="home">
+    </div>
+    <div class="padding-10">
+        <button class="white blue-bg full-width" mat-raised-button>Continue</button>
+    </div>
+    <img class="full-width" src="../../../../../assets/images/home_affairs.jpg" alt="home">
+
+</div>
