--- a/src/app/components/auth/sign-in/feedback/feedback.component.html
+++ b/src/app/components/auth/sign-in/feedback/feedback.component.html
@@ -1,1 +1,6 @@
-<p>feedback works!</p>
+<div class="standard-width full-height">
+    <div class=" full-height full-width flex column center-center">
+        <p class="blue-color"><b>Successful!</b></p>
+        <p>Welcome <b>mathotolebogang@gmail.com</b> </p> 
+    </div>
+</div>
