--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,17 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.origin-video {
+    width: 100%;
+    background-color: #262626;
+    height: 93vh !important;
+}
+
+video {
+    object-fit: cover !important;
+}
+
+
 body {
     background-color: #f5f5f5;
     height: 100vh;
