--- a/src/app/components/auth/sign-in/confirm-app-activation/confirm-app-activation.component.html
+++ b/src/app/components/auth/sign-in/confirm-app-activation/confirm-app-activation.component.html
@@ -4,11 +4,22 @@
         <p class="white"><b>Activate App</b></p>
     </div>
     <div class="picture-container">
-        <img class="full-width" src="../../../../../assets/images/home.PNG" alt="home">
+        <img class="full-width" src="../../../../../assets/images/phone.PNG" alt="home">
+    </div>
+    <div class="white-ish">
+        <div class="text-center">
+            <p class="m-t-0">Activate the App on your phone in two steps</p>
+        </div>
+        <h4 class="no-margin">Next you will:</h4>
+        <div class="list">
+            <ul>
+                <li>Confirm your identity</li>
+                <li>Verify your email address</li>
+            </ul>
+        </div>
     </div>
     <div class="padding-10">
         <button class="white blue-bg full-width" mat-raised-button>Continue</button>
     </div>
     <img class="full-width" src="../../../../../assets/images/home_affairs.jpg" alt="home">
-
 </div>
