--- a/src/app/components/landings/landing/landing.component.html
+++ b/src/app/components/landings/landing/landing.component.html
@@ -1,1 +1,54 @@
-<p>landing works!</p>
+<div class="standard-width full-height relative">
+    <div class="height-50 flex content-end bar">
+        <p class="blue-bg white round flex center-center"><b>For me</b></p>
+        <mat-icon class="blue-color padding-left" matSuffix>more_vert</mat-icon>
+    </div>
+    <div class="full-width">
+        <img class="full-width" src="../../../../assets/images/hello-landing.PNG" alt="hello-landing">
+        <div class="off-white-bg">
+            <p class="no-margin text-center font-xlarge"><b>Lebogang</b></p>
+            <mat-radio-group [(ngModel)]="labelPosition" class="flex center-center">
+                <mat-radio-button class="example-margin" value="after"></mat-radio-button>
+                <mat-radio-button class="example-margin" value="before"></mat-radio-button>
+            </mat-radio-group>
+        </div>
+    </div>
+    <div class="flex column gap-1em">
+        <div class="cards flex center-center gap-1em">
+            <div class="height-80px width-165px flex center-center column white-bg border-radius-10">
+                <mat-icon class="blue-color">phone_iphone</mat-icon>
+                <p class="m-t-3px"><small>Buy prepaid mobile </small></p>
+            </div>
+            <div class="height-80px width-165px flex center-center column white-bg border-radius-10">
+                <mat-icon class="blue-color">phone_iphone</mat-icon>
+                <p class="m-t-3px"><small>Buy prepaid mobile </small></p>
+            </div>
+        </div>
+        <div class="cards flex center-center gap-1em">
+            <div class="height-80px width-165px flex center-center column white-bg border-radius-10">
+                <mat-icon class="blue-color">phone_iphone</mat-icon>
+                <p class="m-t-3px"><small>Buy prepaid mobile </small></p>
+            </div>
+            <div class="height-80px width-165px flex center-center column white-bg border-radius-10">
+                <mat-icon class="blue-color">phone_iphone</mat-icon>
+                <p class="m-t-3px"><small>Buy prepaid mobile </small></p>
+            </div>
+        </div>
+        <div class="cards flex center-center gap-1em">
+            <div class="height-80px width-165px flex center-center column white-bg border-radius-10">
+                <mat-icon class="blue-color">phone_iphone</mat-icon>
+                <p class="m-t-3px"><small>Buy prepaid mobile </small></p>
+            </div>
+            <div class="height-80px width-165px flex center-center column white-bg border-radius-10">
+                <mat-icon class="blue-color">phone_iphone</mat-icon>
+                <p class="m-t-3px"><small>Buy prepaid mobile </small></p>
+            </div>
+        </div>
+    </div>
+    <div class="padding-10">
+        <button class="white blue-bg full-width" mat-raised-button>Sign In</button>
+    </div>
+    <div class="absolute flex center-center">
+        <mat-icon class="blue-color">qr_code_scanner</mat-icon>
+    </div>
+</div>
