--- a/src/app/components/auth/sign-in/confirm-app-activation/confirm-app-activation.component.scss
+++ b/src/app/components/auth/sign-in/confirm-app-activation/confirm-app-activation.component.scss
@@ -8,3 +8,14 @@
     align-items: center;
 }
 
+.m-b-0 {
+    margin-bottom: 0;
+}
+
+.m-t-0{
+    margin-top: 0;
+}
+
+.white-ish {
+    background-color: #fff;
+}
