--- a/src/app/components/auth/sign-in/saving-account-number/saving-account-number.component.html
+++ b/src/app/components/auth/sign-in/saving-account-number/saving-account-number.component.html
@@ -10,7 +10,7 @@
                 <mat-icon matSuffix (click)="info()">info</mat-icon>
             </mat-form-field>
             <div class="padding-10">
-                <button class="white blue-bg full-width" mat-raised-button>Continue</button>
+                <button class="white blue-bg full-width" mat-raised-button (click)="submit()">Continue</button>
             </div>
         </form>
     </div>
