--- a/src/app/components/auth/sign-up/instructions/instructions.component.html
+++ b/src/app/components/auth/sign-up/instructions/instructions.component.html
@@ -1,1 +1,31 @@
-<p>instructions works!</p>
+<div class="standard-width">
+    <div class="full-width">
+
+        <div class="full-width toolbars">
+            <mat-toolbar class=" border-b blue" routerLink="">
+                <mat-icon><span class="material-symbols-outlined">
+                        arrow_back
+                    </span></mat-icon>
+                <p class="text-center"> Open a  savings account</p>
+            </mat-toolbar>
+            
+
+        </div>
+
+<div class="height-418px white-bg flex center-center">
+    <div class="width-90">
+        <div class="flex center-center"><img src="../../../../../assets/image/id-pic.png" alt=""></div>
+ <p class="text-center"> You need to be 16 years or older and have a valid SA ID <br> to open an account.</p>
+ <p class="text-center"> In the next steps we will verft your identity with the <br> Department of Home Affairs.</p>
+    </div>
+ 
+</div>
+<div class="lower">
+    <button mat-button class="btn-bl width-90"routerLink="/identity" >Start</button>
+    <div>
+        <img src="../../../../../assets/image/homeAffairs.png" alt="">
+    </div>
+</div>
+
+    </div>
+</div>
