--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,18 +1,43 @@
 /* You can add global styles to this file, and also import other style files */
 
+// color
+$darkblue: #00486d;
+$blackishtext : #3a3a3a;
+$lightblue : #009de0;
 
 // Sizes
 
 .full-height {
     height: 100%;
 }
-
+.full-view-height {
+    height: 100vh;
+}
 .full-width {
     width: 100%;
 }
 
 .standard-width {
-    width: 50%;
+    width: 100%;
     min-width: 300px;
     max-width: 600px
+}
+// flex
+.flex{
+    display: flex;
+}
+ .center-center{
+    justify-content: center;
+    align-items: center;
+ }
+ .text-center{
+    text-align: center;
+}
+body{
+    margin: 0 ;
+    background-color: #f6f4f5;
+    color:#2d2d2d;;
+}
+.mdc-text-field--filled:not(.mdc-text-field--disabled) {
+    background-color:white !important;
 }
